# hyper-display

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  install.sh  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AccountSummary.tsx  AddressBar.tsx  CoinFilter.tsx  CommandPalette.tsx  Donut.tsx  EquityStrip.tsx  FillsTable.tsx  FundingHeatmap.tsx  FundingTable.tsx  OrderBook.tsx  OrdersTable.tsx  PinView.tsx  PositionsBreakdown.tsx  PositionsTable.tsx  SettingsPanel.tsx  SortableHeader.tsx  Sparkline.tsx  SpotTable.tsx  WalletChip.tsx  WalletMenu.tsx
src/hooks/: useAggregateSnapshot.ts  useFundingAlerts.ts  useFundingRates.ts  useL2Book.ts  useLiqAlerts.ts  useMarkCandles.ts  useSnapshot.ts  useSort.ts  useUpnlAlerts.ts
src/lib/: aggregate.ts  backup.ts  csv.ts  format.ts  hl.ts  pinLayout.ts  settings.ts  wallets.ts  watchlist.ts  webhook.ts
