[package]
name = "hyper-display"
version = "0.1.0"
description = "Always-on Hyperliquid positions dashboard"
authors = ["ramenxbt"]
license = "MIT"
repository = "https://github.com/ramenxbt/hyper-display"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hyper_display_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
